force-app/main/default/objects/Payment_Plan__c/Payment_Plan__c.object-meta.xml
<CustomObject>
    <description>Payment plans are financial arrangements designed to make healthcare services more affordable and accessible. These plans typically allow patients to pay for medical expenses over time, rather than requiring a lump sum upfront.</description>
    <label>Payment Plan</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Payment Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>