force-app/main/default/objects/Payment_Plan__c/fields/Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount__c</fullName>
    <description>This will be a manual input by the user which will depict the total installment amount that a patient will have to pay.</description>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>