force-app/main/default/objects/Payment_Plan__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto populated with the patient&apos;s name and user should not be able to change.</description>
    <label>Patient Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Plan</relationshipLabel>
    <relationshipName>Payment_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>