force-app/main/default/objects/Payment_Plan__c/fields/Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Patient_Responsibility__c</fullName>
    <description>This will be a manual input by the user which will depict the total amount on which the payment plan is to be created..</description>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>