force-app/main/default/objects/Payment_Plan__c/fields/Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Description__c</fullName>
    <description>This will be manual input by the user and will depict any additional descriptions pertaining to the patient.</description>
    <label>Plan Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>