force-app/main/default/objects/Payment_Plan__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <description>This will be auto calculated and auto populated based on the payment collected against payment plan line items related to the payment plan.</description>
    <label>Total Amount Paid</label>
    <summarizedField>Payment_Plan_Line_Item__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Payment_Plan_Line_Item__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>