force-app/main/default/objects/Payment_Plan__c/fields/Total_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Due__c</fullName>
    <description>Calculate the Total balance due from the patient responsibility and Total Amount Paid.</description>
    <formula>Patient_Responsibility__c  -  Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>