force-app/main/default/objects/Payment_Plan__c/validationRules/MaxInstallmentsCreationCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxInstallmentsCreationCheck</fullName>
    <active>true</active>
    <description>To control the maximum no of installment creation with one payment plan.</description>
    <errorConditionFormula>CEILING( Patient_Responsibility__c / Installment_Amount__c ) &gt; 100</errorConditionFormula>
    <errorMessage>You cannot create more than 100 installments. Please create a new payment plan if required.</errorMessage>
</ValidationRule>