force-app/main/default/objects/Payment_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Responsibility__c</columns>
    <columns>Payment_Frequency__c</columns>
    <columns>Installment_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>